@@ -1,3 +1,8 @@
+2012-05-17 Massimo Manghi <mxmanghi@apache.org>
+    * doc/xml/examples.xml: "Hello World" example reworked
+    * rivet/packages/dio/dio.tcl: fixed SQL syntax that would break compatibility with Oracle (fixes
+    reopened bug #53222)
+
 2012-05-15 Massimo Manghi <mxmanghi@apache.org>
     * doc/hello1.rvt: add new "Hello World!" example to explain the new shorthand syntax <?= ... ?>
  
